// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errors Snapshot Tests should create ADD_ERROR action if adding an error is successful 1`] = `
Array [
  Object {
    "error": "Sample error message",
    "type": "ADD_ERROR",
  },
]
`;

exports[`Errors Snapshot Tests should create REMOVE_ERROR action if removing an error is successful 1`] = `
Array [
  Object {
    "type": "REMOVE_ERROR",
  },
]
`;
